# plotting-evaluation

./: .gitignore  README.md
matplotlib/dynamic_plot_updates/: colofill-xdata.txt  colofill-ydata.txt  colofill-zdata.txt  dynamic_plot_update.py  mainwindow.ui
matplotlib/main/: 2D Contour.ipynb  Non Orthogonal Axes.ipynb  Test Nan.ipynb  evaluate_main.py  figureslib.py  function_generator.py  legend_picking.py  mplgraphicsview.py  plot_window.py  ui_FigureForm.ui  ui_TestMainWindow.ui
matplotlib/many_curves/: multiple_curves.py
matplotlib/ragged_workspaces/: ragged_workspaces.py  raggeddata-signal.txt  raggeddata-x.txt  raggeddata-y.txt
matplotlib/sample_log_plots/: larmor00000063-dae_beam_current.txt  larmor00000063-run_status.txt  sample_log_plots.py
qtcharts/: README.md
qtcharts/1d_plot_errors/: CMakeLists.txt  README.md
qtcharts/1d_plot_errors/src/: Workspace.cpp  Workspace.h  WorkspaceFactory.h  main.cpp
qtcharts/change_plot_props/: CMakeLists.txt
qtcharts/change_plot_props/src/: Figure.cpp  Figure.h  Workspace.cpp  main.cpp
qtcharts/python-example/: README.md
qtcharts/slice_plot/: CMakeLists.txt
qtcharts/slice_plot/src/: main.cpp
